<resources>
    <string name="app_name">Store Shopping List</string>
    <string name="action_add_store">Add Store</string>
    <string name="action_add_item">Add Item</string>
    <string name="ok">OK</string>
    <string name="storename_hint">Store Name</string>
    <string name="street_hint">Street Address</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="addstore_text">Add Store</string>
    <string name="actionbar_stores">Store Shopping Lists</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="actionbar_itemlist">Shopping List</string>
    <string name="itemname_hint">Item Name</string>
    <string name="additem_button">Add Item</string>
    <string name="updateitem_button">Update Item</string>
    <string name="actionbar_additem">Add Item</string>
    <string name="actionbar_updateitem">Update Item</string>
    <string name="show_map">Show Map</string>
    <string name="actionbar_map">Map</string>
</resources>
